--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link rel="icon" href="https://www.freeiconspng.com/uploads/pokeball-icon-4.png">
+    <title>Play Pokemon Now</title>
   </head>
   <body style="background: #f3fcff">
     <div id="root"></div>
